crates/cctui-tui/src/snapshots/cctui__view_snapshots__diagnose_panel_still_fetching.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 873
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  4 sessions  ● 3 active  ! 1 need input — Ctrl+g
 Sessions  starred · live · dispatched  sort: activity ↓  group: status
   ┌ Diagnose ──────────────────────────────────────────────────────────────────────────────────┐
   │s-working                                                                                   │
   │fetching…                                                                                   │
▸  │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │ j/k Scroll  r Refresh  y Copy id  D/i Switch  Esc Close                                    │
   └────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
