crates/cctui-tui/src/snapshots/cctui__view_snapshots__diagnose_panel_with_an_unreachable_daemon.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ⚠ ~0 need you  ▪ 0/0 machines  $1.25 today
 1 Sessions  2 Bookmarks  3 Overview  4 Access  5 Accounts  6 Settings
   ┌ Diagnose ──────────────────────────────────────────────────────────────────────────────────┐
   │s-working                                                                                   │
   │server:                                                                                     │
▸  │status                             active                                                   │
   │account                            main                                                     │
   │account bound                      false                                                    │
   │machine last seen                  4s ago                                                   │
   │daemon:                                                                                     │
   │UNAVAILABLE                        machine orion is offline                                 │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │ j/k Scroll  r Refresh  y Copy id  D/i Switch  Esc Close                                    │
   └────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
