crates/cctui-tui/src/snapshots/cctui__view_snapshots__dispatch_tab_codex_harness.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1588
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸   ┌ Dispatch a job ──────────────────────────────────────────────────────────────────────────┐
   ▾│ Dispatcher [k8s-cyberia           ]  Harness ( ) claude (*) codex                        │
    │ Repo [cctui             ] Ticket [CCT-1102      ] Timeout [60   ] min                    │
    │ Prompt [                                                                              ]  │
    │ Context pack                                                                             │
   ▾│   URL [https://git.example/packs.git                                                 ]   │
    │   ref [main        ] subdir [packs/cctui     ] token [********  ]                        │
    │  Tab field  ctrl+d dispatcher  ctrl+h harness  ctrl+s dispatch                           │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    └──────────────────────────────────────────────────────────────────────────────────────────┘


 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
