crates/cctui-tui/src/snapshots/cctui__view_snapshots__dispatchers_enroll_form.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1716
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (user)
 1 Sessions  2  3  4   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Dispatchers ─────────────────────────────────────────────────────────────────────────────┐
▸   │ Enroll a dispatcher                                                                      │
   ▾│                                                                                          │
    │  name                  k8s-tokyo                                                         │
    │❯ kind                  kubernetes▏                                                       │
    │  account or pool:name                                                                    │
   ▾│                                                                                          │
    │  a binding of `pool:<name>` elects within a pool; anything else is an account            │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ Tab:field  Enter:save  Esc:back                                                          │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
