crates/cctui-tui/src/snapshots/cctui__view_snapshots__dispatchers_panel_read_only_without_the_enroll_scope.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1699
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g  @dev (user)
 1 Sessions  2  3  4   starred · live · dispatched  sort: activity ↓  group: status
   ▾┌ Dispatchers ─────────────────────────────────────────────────────────────────────────────┐
▸   │   NAME            KIND        STATE      DEFAULT                                         │
   ▾│▸  k8s-cyberia     kubernetes  connected  pool:work                                       │
    │   docker-mac      docker      stale      personal-max                                    │
    │                                                                                          │
    │                                                                                          │
   ▾│                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │                                                                                          │
    │ ↑/↓:move  read-only (no enroll scope)  Ctrl+r:refresh  Esc:close                         │
    └──────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
